[gd_scene load_steps=42 format=3 uid="uid://b3yxvmw1fmgb4"]

[ext_resource type="Script" uid="uid://bri0ar82vcsyc" path="res://Assets/Scripts/Core/player.gd" id="1_bttla"]
[ext_resource type="Script" uid="uid://b62ppvc03a6b1" path="res://Assets/Scripts/Core/CameraManager.gd" id="2_de37j"]
[ext_resource type="ArrayMesh" uid="uid://c27o2arf8nixo" path="res://Assets/Meshes/Prototype_Ship.obj" id="3_uksnq"]
[ext_resource type="Material" uid="uid://c8dtnmdyqw1as" path="res://Assets/Materials/Ships/Body.tres" id="4_4trtj"]
[ext_resource type="Material" uid="uid://dtu5xtqw54qjc" path="res://Assets/Materials/Ships/Wings.tres" id="5_qb0om"]
[ext_resource type="Material" uid="uid://xufxqc2vhosk" path="res://Assets/Materials/Ships/Engines.tres" id="6_s3mlt"]
[ext_resource type="Material" uid="uid://cvy2wx33hf6xg" path="res://Assets/Materials/Ships/Energy.tres" id="7_jv85r"]
[ext_resource type="Script" uid="uid://dufmvqfvv8eiu" path="res://Assets/Scripts/Core/ShipEffectsController.gd" id="8_cmkl5"]
[ext_resource type="Curve" uid="uid://cnnxrc2knraje" path="res://Assets/Curves/ParticleSizeCurve.tres" id="9_m6m72"]
[ext_resource type="Curve" uid="uid://bqxjimb8xlki1" path="res://Assets/Curves/EngineLightCurve.tres" id="10_vwhge"]
[ext_resource type="CylinderMesh" uid="uid://cx3jhed4ffdac" path="res://Assets/Materials/EngineConeMesh.tres" id="11_txwvw"]
[ext_resource type="Curve" uid="uid://eb184d2a41yc" path="res://Assets/Curves/EngineConeCurve.tres" id="11_uksnq"]
[ext_resource type="Script" uid="uid://bqflf4vw8mem1" path="res://addons/lines_and_trails_3d/trail_3d.gd" id="12_r5ri1"]
[ext_resource type="Curve" uid="uid://c1yv3tea7x6gj" path="res://Assets/Curves/trail_velocity_curve.tres" id="13_guf3m"]
[ext_resource type="Script" uid="uid://w2iurlb7divh" path="res://Assets/Scripts/PlayerStateMachine/ShipStateMachine.gd" id="14_kj614"]
[ext_resource type="Resource" uid="uid://y2vkkuwjl833" path="res://Assets/Scripts/Resources/BaseShipResource.tres" id="15_0cqmc"]
[ext_resource type="Script" uid="uid://e07chentfdx1" path="res://Assets/Scripts/PlayerStateMachine/Flying.gd" id="16_lji6i"]
[ext_resource type="Script" uid="uid://nalshrhltoq6" path="res://Assets/Scripts/PlayerStateMachine/Hovering.gd" id="17_ajwy2"]
[ext_resource type="Curve" uid="uid://ctbfowvcgr80h" path="res://Assets/Curves/FallingDampingCurve.tres" id="18_2lat7"]
[ext_resource type="Script" uid="uid://dl7b0pk1wtb5i" path="res://Assets/Scripts/PlayerStateMachine/Air_Boost.gd" id="19_xhmyi"]
[ext_resource type="Script" uid="uid://1tjhfsykqpp3" path="res://Assets/Scripts/PlayerStateMachine/Drift.gd" id="20_1itww"]
[ext_resource type="Script" uid="uid://breiaj8f72g46" path="res://Assets/Scripts/PlayerStateMachine/Rolling.gd" id="21_de37j"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0v85l"]
height = 1.31981
radius = 1.91406

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_cgw0f"]
length = 2.709

[sub_resource type="Curve" id="Curve_6g8w3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.247126, 0.484711), 0.0, 0.0, 0, 0, Vector2(0.744253, 0.492073), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="SphereShape3D" id="SphereShape3D_smq6u"]

[sub_resource type="Curve" id="Curve_uksnq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0495049, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ilw7v"]
_limits = [0.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 200), 0.0, -64.3081, 0, 1, Vector2(1, 135.692), -64.3081, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_y725d"]
_data = [Vector2(0, 0), 0.0, 9.45161, 0, 1, Vector2(0.105802, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ktdep"]
_data = [Vector2(0, 1), 0.0, -0.691922, 0, 1, Vector2(1, 0.308078), -0.691922, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_0hif8"]
_data = [Vector2(0, 1), 0.0, -0.691922, 0, 1, Vector2(1, 0.308078), -0.691922, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_751v6"]
_data = [Vector2(0, 0.658109), 0.0, 3.13044, 0, 1, Vector2(0.109215, 1), 3.13044, 0.0, 1, 0, Vector2(1, 0.312148), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_m8k8q"]
colors = PackedColorArray(1, 1, 1, 0.509804, 1, 0.813333, 0.68, 0.0196078)

[sub_resource type="Curve" id="Curve_noymn"]
_data = [Vector2(0, 1), 0.0, 45.1239, 0, 0, Vector2(0.0446429, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.04673, 0.0, 1, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_a5vl3"]
offsets = PackedFloat32Array(0, 0.0585938, 0.33871, 0.812903)
colors = PackedColorArray(1, 0.411019, 0.162818, 0, 1, 0.360784, 0, 1, 1, 0.360784, 0, 0.894118, 0.935743, 0.335478, 7.66242e-05, 0)

[sub_resource type="Curve" id="Curve_paeve"]
_limits = [0.0, 1.0, 0.0, 2.5]
_data = [Vector2(0.0819672, 0.115938), 0.0, 0.510407, 0, 0, Vector2(1.87705, 1), 0.0625179, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_4trtj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.551155, 0.0528075), 0.0958123, 9.6943, 1, 1, Vector2(0.623762, 0.756685), 9.6943, 1.81578, 1, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_de37j"]
_data = [Vector2(0, 0), 0.0, -0.0392011, 0, 0, Vector2(1, 1), 3.83173e-07, 0.0, 0, 0]
point_count = 2

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_uksnq"]
friction = 40.0
rough = true

[sub_resource type="SphereShape3D" id="SphereShape3D_svb41"]
radius = 2.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_noymn"]
properties/0/path = NodePath(".:playerTransform")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:engine_cone_top_rad")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:engine_cone_height")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:light_energy_spot")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:light_energy_omni")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:light_attenuation")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:ship_tilt")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:trail_width")
properties/7/spawn = true
properties/7/replication_mode = 1

[node name="PlayerContainer" type="Node"]
script = ExtResource("1_bttla")

[node name="Player" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)
collision_layer = 2
floor_max_angle = 0.872665

[node name="RayCast3D" type="RayCast3D" parent="Player"]
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, 0, 0)
enabled = false
target_position = Vector3(0, -2, 0)

[node name="ShipCollider" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.62, 0, 0, 0, 0.62, 0, 0, 0, 0.62, 0, 0, 0)
shape = SubResource("CylinderShape3D_0v85l")
disabled = true
debug_color = Color(0, 0.595, 0.7, 0.858824)

[node name="GroundedRayCollider" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.62, 0, 0, 0, -2.71011e-08, -0.62, 0, 0.62, -2.71011e-08, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_cgw0f")
disabled = true

[node name="CameraManager" type="Node3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, -1, 0)
script = ExtResource("2_de37j")
camera_ease_curve = SubResource("Curve_6g8w3")
ease_speed = 1.5

[node name="LookAtTarget" type="Node3D" parent="Player/CameraManager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, -1.35983e-08, 0, 1, 0, 1.35983e-08, 0, 1, 0, 5, -15)

[node name="Arm" type="SpringArm3D" parent="Player/CameraManager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 2.32515, -0.0321627)
shape = SubResource("SphereShape3D_smq6u")
spring_length = 6.0
margin = 0.5

[node name="MockCamera" type="Camera3D" parent="Player/CameraManager/Arm"]
unique_name_in_owner = true
physics_interpolation_mode = 1
transform = Transform3D(1, -1.38767e-05, 7.97361e-05, 3.42131e-05, 0.965314, -0.261093, -7.33584e-05, 0.261093, 0.965315, 0.000976563, -0.555679, 3.04504)

[node name="ShipContainer" type="MeshInstance3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 1.6204e-08, 0, 1, 0, -1.6204e-08, 0, 1, 0, 0, 0)
mesh = ExtResource("3_uksnq")
surface_material_override/0 = ExtResource("4_4trtj")
surface_material_override/1 = ExtResource("5_qb0om")
surface_material_override/2 = ExtResource("6_s3mlt")
surface_material_override/3 = ExtResource("7_jv85r")
script = ExtResource("8_cmkl5")
ParticleSizeCurve = ExtResource("9_m6m72")
EngineLightCurve = ExtResource("10_vwhge")
EngineConeCurve = ExtResource("11_uksnq")
TrailCurve = SubResource("Curve_uksnq")
EngineLightIntensity = 3.625
EngineLightEnergy = 3.0
trail_width_max = 0.45
engine_cone_lerp_speed = 8.0
trail_speed_velocity = 1.5

[node name="ShipMesh" type="MeshInstance3D" parent="Player/ShipContainer"]

[node name="Body" type="MeshInstance3D" parent="Player/ShipContainer/ShipMesh"]

[node name="Engines" type="MeshInstance3D" parent="Player/ShipContainer/ShipMesh"]

[node name="WeaponPrimary" type="MeshInstance3D" parent="Player/ShipContainer/ShipMesh"]
skeleton = NodePath("../Engines")

[node name="WeaponSecondary" type="MeshInstance3D" parent="Player/ShipContainer/ShipMesh"]
skeleton = NodePath("../Engines")

[node name="HeadLight" type="SpotLight3D" parent="Player/ShipContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.10352e-05, 0, -2.0842)
light_energy = 10.1
light_specular = 0.2
distance_fade_begin = 4.95
distance_fade_length = 6.1
spot_range = 150.0
spot_attenuation = 0.12
spot_angle = 60.0
spot_angle_attenuation = 0.482969

[node name="OmniLights" type="Node3D" parent="Player/ShipContainer"]
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, 0, 0)

[node name="TailLight" type="OmniLight3D" parent="Player/ShipContainer/OmniLights"]
transform = Transform3D(1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 0, 1, -6.10352e-05, -0.207854, 0.43457)
light_color = Color(1, 0.802444, 0.66258, 1)
light_specular = 0.25
omni_range = 15.851
omni_attenuation = -0.032
omni_shadow_mode = 0

[node name="EngineLights" type="Node3D" parent="Player/ShipContainer"]
transform = Transform3D(0.2299, 0, 0, 0, 0.2299, 0, 0, 0, 0.2299, 0, 0, 0)

[node name="EngineLight_L" type="SpotLight3D" parent="Player/ShipContainer/EngineLights"]
transform = Transform3D(-4.34972, 0, 4.17233e-07, 0, 4.34972, 0, -3.57628e-07, 0, -4.34972, -3.72844, 0, 3.53577)
light_color = Color(1, 0.636765, 0.30254, 1)
spot_range = 8.85
spot_angle = 61.58

[node name="EngineLight_R" type="SpotLight3D" parent="Player/ShipContainer/EngineLights"]
transform = Transform3D(-4.34972, 0, 3.57628e-07, 0, 4.34972, 0, -3.57628e-07, 0, -4.34972, 3.728, 0, 3.536)
light_color = Color(1, 0.636765, 0.30254, 1)
spot_range = 8.85
spot_angle = 61.58

[node name="EngineCones" type="Node3D" parent="Player/ShipContainer"]
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, 0, 0)

[node name="EngineCone_L" type="CPUParticles3D" parent="Player/ShipContainer/EngineCones"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.918339, -1.93777e-08, 1.23789)
local_coords = true
mesh = ExtResource("11_txwvw")
particle_flag_align_y = true
direction = Vector3(0, -1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.1
linear_accel_min = 0.01
linear_accel_max = 0.01
linear_accel_curve = SubResource("Curve_ilw7v")
scale_amount_curve = SubResource("Curve_y725d")
split_scale = true
scale_curve_x = SubResource("Curve_ktdep")
scale_curve_y = SubResource("Curve_0hif8")
scale_curve_z = SubResource("Curve_751v6")
color = Color(1, 0.69912, 0.378778, 1)
color_ramp = SubResource("Gradient_m8k8q")

[node name="EngineCone_R" type="CPUParticles3D" parent="Player/ShipContainer/EngineCones"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.918, 0, 1.238)
local_coords = true
mesh = ExtResource("11_txwvw")
particle_flag_align_y = true
direction = Vector3(0, -1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.1
linear_accel_min = 0.01
linear_accel_max = 0.01
linear_accel_curve = SubResource("Curve_ilw7v")
scale_amount_curve = SubResource("Curve_y725d")
split_scale = true
scale_curve_x = SubResource("Curve_ktdep")
scale_curve_y = SubResource("Curve_0hif8")
scale_curve_z = SubResource("Curve_751v6")
color = Color(1, 0.69912, 0.378778, 1)
color_ramp = SubResource("Gradient_m8k8q")

[node name="Trails" type="Node3D" parent="Player/ShipContainer"]

[node name="Engine_Trail_L" type="MeshInstance3D" parent="Player/ShipContainer/Trails"]
process_priority = 9999
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.893201, 0, 1.61417)
skeleton = NodePath("")
script = ExtResource("12_r5ri1")
initial_velocity_toggle = true
time_limit = 1.0
initial_velocity_curve = ExtResource("13_guf3m")
width = 0.553
width_curve = SubResource("Curve_noymn")
gradient = SubResource("Gradient_a5vl3")
material_type = 3
metadata/_custom_type_script = "uid://bqflf4vw8mem1"

[node name="Engine_Trail_R" type="MeshInstance3D" parent="Player/ShipContainer/Trails"]
process_priority = 9999
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.893, 0, 1.61447)
skeleton = NodePath("")
script = ExtResource("12_r5ri1")
initial_velocity_toggle = true
time_limit = 1.0
initial_velocity_curve = ExtResource("13_guf3m")
width = 0.553
width_curve = SubResource("Curve_noymn")
gradient = SubResource("Gradient_a5vl3")
material_type = 3
metadata/_custom_type_script = "uid://bqflf4vw8mem1"

[node name="Laser" type="Node" parent="Player"]

[node name="Missile" type="Node" parent="Player"]

[node name="ShipStateMachine" type="Node" parent="Player" node_paths=PackedStringArray("initialState")]
unique_name_in_owner = true
script = ExtResource("14_kj614")
easeOut = SubResource("Curve_paeve")
ship_stats = ExtResource("15_0cqmc")
initialState = NodePath("Rolling")

[node name="Flying" type="Node" parent="Player/ShipStateMachine" node_paths=PackedStringArray("Player", "ShipContainer")]
unique_name_in_owner = true
script = ExtResource("16_lji6i")
Player = NodePath("../..")
ShipContainer = NodePath("../../ShipContainer")

[node name="Hovering" type="Node" parent="Player/ShipStateMachine" node_paths=PackedStringArray("Player", "ShipContainer", "floor_raycast")]
unique_name_in_owner = true
script = ExtResource("17_ajwy2")
Player = NodePath("../..")
ShipContainer = NodePath("../../ShipContainer")
floor_raycast = NodePath("../../RayCast3D")
falling_damping_curve = ExtResource("18_2lat7")

[node name="Air_Drift" type="Node" parent="Player/ShipStateMachine"]
unique_name_in_owner = true

[node name="Air_Boost" type="Node" parent="Player/ShipStateMachine"]
unique_name_in_owner = true
script = ExtResource("19_xhmyi")

[node name="Drift" type="Node" parent="Player/ShipStateMachine" node_paths=PackedStringArray("Player", "proxy", "ShipContainer", "floor_raycast")]
unique_name_in_owner = true
script = ExtResource("20_1itww")
Player = NodePath("../..")
proxy = NodePath("../../../PlayerProxy")
ShipContainer = NodePath("../../ShipContainer")
floor_raycast = NodePath("../../RayCast3D")
falling_damping_curve = ExtResource("18_2lat7")

[node name="Boost" type="Node" parent="Player/ShipStateMachine"]
unique_name_in_owner = true

[node name="Rolling" type="Node" parent="Player/ShipStateMachine" node_paths=PackedStringArray("player", "proxy_xform", "proxy_orb", "ShipContainer")]
unique_name_in_owner = true
script = ExtResource("21_de37j")
player = NodePath("../..")
proxy_xform = NodePath("../../../PlayerProxy")
proxy_orb = NodePath("../../../RollingProxy/Orb")
ShipContainer = NodePath("../../ShipContainer")
StickCurve = SubResource("Curve_4trtj")
turn_force = 8.0
rolling_level_speed = 6.0
gravity_airborne = 3.0
gravity_grounded = 0.4
ground_stick_force = 100.0
state_max_speed = 80.0
ungrounded_grace = 0.4
easeInOut = SubResource("Curve_de37j")

[node name="AscendCharge" type="Node" parent="Player/ShipStateMachine"]
unique_name_in_owner = true

[node name="PlayerProxy" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)
collision_layer = 2
floor_max_angle = 0.872665

[node name="ShipCollider" type="CollisionShape3D" parent="PlayerProxy"]
transform = Transform3D(0.62, 0, 0, 0, 0.62, 0, 0, 0, 0.62, 0, 0, 0)
shape = SubResource("CylinderShape3D_0v85l")
disabled = true
debug_color = Color(0, 0.595, 0.7, 0.858824)

[node name="GroundedRayCollider" type="CollisionShape3D" parent="PlayerProxy"]
transform = Transform3D(0.62, 0, 4.44089e-16, 0, -2.71011e-08, -0.62, 0, 0.62, -2.71011e-08, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_cgw0f")
disabled = true

[node name="RollingProxy" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, -1.77636e-15, 0, 1, 0, 1.77636e-15, 0, 0.999999, 0, 0, 0)

[node name="Orb" type="RigidBody3D" parent="RollingProxy"]
unique_name_in_owner = true
collision_layer = 2
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_uksnq")
gravity_scale = 0.1
contact_monitor = true
max_contacts_reported = 10
linear_damp = 0.24
angular_damp = 0.1

[node name="WeBallNow" type="CollisionShape3D" parent="RollingProxy/Orb"]
transform = Transform3D(1, 0, -2.11758e-22, 0, 1, 0, 2.11758e-22, 0, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_svb41")

[node name="PawnSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_noymn")
